# test-unistream-meltano

./: LICENSE  README.md  pyproject.toml
tap_appstoreconnect/: __init__.py  __main__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
